--- a/AdventureWorks_BronzeToSilver.ipynb
+++ b/AdventureWorks_BronzeToSilver.ipynb
@@ -216,64 +216,12 @@
    },
    "outputs": [],
    "source": [
-    "df_AdventureWorks_Sales_2015 = spark.read.format(\"csv\") \\\n",
+    "df_AdventureWorks_Sales = spark.read.format(\"csv\") \\\n",
     "    .option(\"header\", \"true\") \\\n",
     "    .option(\"inferSchema\", \"true\") \\\n",
-    "    .load(\"abfss://adventureworks@rmpyru.dfs.core.windows.net/bronze/AdventureWorks_Sales_2015.csv\")\n",
+    "    .load(\"abfss://adventureworks@rmpyru.dfs.core.windows.net/bronze/AdventureWorks_Sales_*.csv\")\n",
     "\n",
-    "#df_AdventureWorks_Sales_2015.display()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "d0375982-7e2f-4fd4-8acb-8f5230ad15f4",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df_AdventureWorks_Sales_2016 = spark.read.format(\"csv\") \\\n",
-    "    .option(\"header\", \"true\") \\\n",
-    "    .option(\"inferSchema\", \"true\") \\\n",
-    "    .load(\"abfss://adventureworks@rmpyru.dfs.core.windows.net/bronze/AdventureWorks_Sales_2016.csv\")\n",
-    "\n",
-    "#df_AdventureWorks_Sales_2016.display()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "acdacc2a-2090-42a5-b9d0-3f75a247891a",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df_AdventureWorks_Sales_2017 = spark.read.format(\"csv\") \\\n",
-    "    .option(\"header\", \"true\") \\\n",
-    "    .option(\"inferSchema\", \"true\") \\\n",
-    "    .load(\"abfss://adventureworks@rmpyru.dfs.core.windows.net/bronze/AdventureWorks_Sales_2017.csv\")\n",
-    "\n",
-    "#df_AdventureWorks_Sales_2017.display()"
+    "#df_AdventureWorks_Sales.display()"
    ]
   },
   {
@@ -306,7 +254,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "686accb1-cd06-4521-ace2-15049446309c",
      "showTitle": false,
@@ -492,9 +443,41 @@
    },
    "outputs": [],
    "source": [
-    "df_AdventureWorks_Sales_2015.write.mode(\"append\").option(\"path\", \"abfss://adventureworks@rmpyru.dfs.core.windows.net/silver/AdventureWorks_Sales\").save()\n",
-    "df_AdventureWorks_Sales_2016.write.mode(\"append\").option(\"path\", \"abfss://adventureworks@rmpyru.dfs.core.windows.net/silver/AdventureWorks_Sales\").save()\n",
-    "df_AdventureWorks_Sales_2017.write.mode(\"append\").option(\"path\", \"abfss://adventureworks@rmpyru.dfs.core.windows.net/silver/AdventureWorks_Sales\").save()"
+    "df_AdventureWorks_Sales.write.mode(\"overwrite\").option(\"path\", \"abfss://adventureworks@rmpyru.dfs.core.windows.net/silver/AdventureWorks_Sales\").save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "23240cf1-e0c2-4859-9526-fe5afad1c044",
+     "showTitle": false,
+     "tableResultSettingsMap": {
+      "1": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{\"StockDate\":292},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1753065959277}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 1
+      }
+     },
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_AdventureWorks_Sales.display()\n",
+    "\n",
+    "df_AdventureWorks_Sales.withColumn(\"StockDate\",to_timestamp(col(\"StockDate\"),\"MM/dd/yyyy\"))\\\n",
+    "    .withColumn(\"OrderNumber\",regexp_replace(col(\"OrderNumber\"),\"S\",\"T\"))\\\n",
+    "        .withColumn(\"Multiply\",col(\"OrderLineItem\")*col(\"OrderQuantity\")).display()\n",
+    "\n",
+    "df_AdventureWorks_Sales.groupBy(\"OrderDate\").agg(countDistinct(col(\"OrderNumber\")).alias(\"OrderPerDay\")).display()"
    ]
   }
  ],
