--- a/AdventureWorks_BronzeToSilver.ipynb
+++ b/AdventureWorks_BronzeToSilver.ipynb
@@ -458,26 +458,20 @@
      "inputWidgets": {},
      "nuid": "23240cf1-e0c2-4859-9526-fe5afad1c044",
      "showTitle": false,
-     "tableResultSettingsMap": {
-      "1": {
-       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{\"StockDate\":292},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1753065959277}",
-       "filterBlob": null,
-       "queryPlanFiltersBlob": null,
-       "tableResultIndex": 1
-      }
-     },
+     "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "outputs": [],
    "source": [
-    "df_AdventureWorks_Sales.display()\n",
+    "'''df_AdventureWorks_Sales.display()\n",
     "\n",
     "df_AdventureWorks_Sales.withColumn(\"StockDate\",to_timestamp(col(\"StockDate\"),\"MM/dd/yyyy\"))\\\n",
     "    .withColumn(\"OrderNumber\",regexp_replace(col(\"OrderNumber\"),\"S\",\"T\"))\\\n",
     "        .withColumn(\"Multiply\",col(\"OrderLineItem\")*col(\"OrderQuantity\")).display()\n",
     "\n",
-    "df_AdventureWorks_Sales.groupBy(\"OrderDate\").agg(countDistinct(col(\"OrderNumber\")).alias(\"OrderPerDay\")).display()"
+    "df_AdventureWorks_Sales.groupBy(\"OrderDate\").agg(countDistinct(col(\"OrderNumber\")).alias(\"OrderPerDay\")).display()\n",
+    "'''"
    ]
   }
  ],
